update DELETE /api/v1/relations/follower/{followerId}/following/{followingid} to remove request body
