# src/app/utilities/schema/schemas.ts
@@ -47,6 +47,11 @@ export const CancelFollowingBodySchema = Joi.object().keys({
   followingId: Joi.string().required()
 });
 
+export const CancelFollowingParamSchema = Joi.object().keys({
+  followerId: Joi.string().required(),
+  followingId: Joi.string().required()
+});
+
 export const GetFollowersBodySchema = Joi.object().keys({
   userId: Joi.string().required()
 });
